--- a/src/app/components/modal.module.css
+++ b/src/app/components/modal.module.css
@@ -1,6 +1,10 @@
 .modals {
   width: 100%;
   height: 100%;
+  position: fixed;
+  z-index: 20;
+  top: 0;
+  left: 0;
 }
 .modal-mask {
   position: absolute;
@@ -25,6 +29,9 @@
   position: absolute;
   bottom: 0;
   z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* add shadow on top */
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
